backpack/src/snapshots/backpack__content__tests__coord_new-2.snap
---
source: backpack/src/content.rs
expression: "Coordinate::new(Path::new(\"here\"), None,\n    &Location::from(&Url::parse(\"https://github.com/foo/bar/-/subfolder/qux\").unwrap(),\n                true).unwrap(), false)"
---
Ok(
    Coordinate {
        from: "here/subfolder/qux",
        to: "subfolder/qux",
        is_file: false,
        remove_from: false,
    },
)
