backpack/src/snapshots/backpack__content__tests__coord_new-3.snap
---
source: backpack/src/content.rs
expression: "Coordinate::new(Path::new(\"here\"), Some(Path::new(\"there\")),\n        &Location::from(&Url::parse(\"https://github.com/foo/bar\").unwrap(),\n                    true).unwrap(), false).unwrap()"
---
from: here
to: there
is_file: false
remove_from: false

