backpack/src/snapshots/backpack__content__tests__coord_new-6.snap
---
source: backpack/src/content.rs
expression: "Coordinate::new(Path::new(\"tests\"), Some(Path::new(\"there\")),\n        &Location::from(&Url::parse(\"https://github.com/foo/bar/-/fixtures/local-project.yaml\").unwrap(),\n                    true).unwrap(), false).unwrap()"
---
from: tests/fixtures/local-project.yaml
to: there
is_file: true
remove_from: false

