backpack/src/snapshots/backpack__content__tests__coord_new.snap
---
source: backpack/src/content.rs
expression: "Coordinate::new(Path::new(\"here\"), None,\n        &Location::from(&Url::parse(\"https://github.com/foo/bar\").unwrap(),\n                    true).unwrap(), false).unwrap()"
---
from: here
to: "."
is_file: false
remove_from: false

