backpack/src/snapshots/backpack__content__tests__render_swaps.snap
---
source: backpack/src/content.rs
expression: swaps
---
- key: key
  val_template: "Hello {{world}}"
  val: Hello crewl world
  path: ~
  kind: all

